# CSA_HW2

./: CMakeLists.txt  README.md  main.cpp  rand.h
container/: Container.cpp  Container.h
input/: input2.txt  input4.txt  input5.txt
output/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
transport_type/: Bus.cpp  Bus.h  Car.cpp  Car.h  Transport.cpp  Transport.h  Truck.cpp  Truck.h
